objects/Business_Hours__c.object
<CustomObject>
    <fields>
        <fullName>AccountID__c</fullName>
        <formula>Account__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Business Hours</relationshipLabel>
        <relationshipName>Business_Hours</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Close_Fx__c</fullName>
        <formula>text(Close__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Fx</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close__c</fullName>
        <label>Close</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Day_of_Week__c</fullName>
        <label>Day of Week</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Day_of_Week_fx__c</fullName>
        <formula>text(Day_of_Week__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day of Week Fx</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Closed__c</fullName>
        <label>Open/Closed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open on this day</fullName>
                    <default>true</default>
                    <label>Open on this day</label>
                </value>
                <value>
                    <fullName>Closed on this day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Open_Fx__c</fullName>
        <formula>text(Open__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Fx</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open__c</fullName>
        <label>Open</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Business Hours</relationshipLabel>
        <relationshipName>Business_Hours</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Business Hours</relationshipLabel>
        <relationshipName>Business_Hours</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Business_Hours_Not_Rounded__c</fullName>
        <formula>/* 
* @see https://help.salesforce.com/articleView?id=custom_field_time_overview.htm&amp;type=5 
* for Time Field calculation (see 24 hour time clock considerations below.) 
* Formula prior to this modification is in a comment at the bottom. 
*/ 


if(ispickval(Open_Closed__c,&quot;Closed on this day&quot;),0,(Close__c-Open__c)/3600000)


/*============== 24 hour time clock considerations ===================== 
You can subtract one time field from another in a formula. The results 
milliseconds. For example,TimeField1__c has the value “10:00pm” and 
TimeField2__c has the value “9:00pm”: TimeField1__c - TimeField2__c is 3600000 

The result is never a negative number. Subtraction is the difference 
between two time values, using a 24-hour clock. 

For example, when calculating the number of hours a business is open, 
you use the following formula: (ClosedTime - OpenTime) / 3600000. 

ClosedTime = 5 PM, OpenTime = 8 AM, ClosedTime - OpenTime = 9 hours 
ClosedTime = 5 AM, OpenTime = 7 AM, ClosedTime - OpenTime = 22 hours 
=========================================================================*/ 

/*xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx 
Previous formula as of 11/13 
IF( HOUR(Open__c) &gt; HOUR(Close__c), 
24 - HOUR(Open__c) + HOUR(Close__c), 
HOUR(Close__c) - HOUR(Open__c)) 
xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Business Hours Not Rounded</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Business_Hours_Open_Acct__c</fullName>
        <formula>Account__r.Total_Business_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Weekly Business Hours Open</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Business_Hours__c</fullName>
        <formula>/* 
 * @see https://help.salesforce.com/articleView?id=custom_field_time_overview.htm&amp;type=5 
 * for Time Field calculation (see 24 hour time clock considerations below.) 
 * Formula prior to this modification is in a comment at the bottom. 
 * 
 *  Use of 2 different fields here to allow for easy future mod. 
 * 
 *  ** Req from business was to not round (not to round up to the nearest hour) but to display the actual value. 
 *    
 *
 *  @see Total_Business_Hours_Not_Rounded__c,  ---&gt;  (Close__c - Open__c) / 3600000 
 */ 
If(AND((not(ispickval(Open_Closed__c,&quot;Closed on this day&quot;))),!ISBLANK(Open__c),!ISBLANK(Close__c) ,Total_Business_Hours_Not_Rounded__c = 0),
    24.00,
    Total_Business_Hours_Not_Rounded__c)


/*============== 24 hour time clock considerations ===================== 
You can subtract one time field from another in a formula. The results 
milliseconds. For example,TimeField1__c has the value “10:00pm” and 
TimeField2__c has the value “9:00pm”: TimeField1__c - TimeField2__c is 3600000 

The result is never a negative number. Subtraction is the difference 
between two time values, using a 24-hour clock. 

For example, when calculating the number of hours a business is open, 
you use the following formula: (ClosedTime - OpenTime) / 3600000. 

ClosedTime = 5 PM, OpenTime = 8 AM, ClosedTime - OpenTime = 9 hours 
ClosedTime = 5 AM, OpenTime = 7 AM, ClosedTime - OpenTime = 22 hours 
=========================================================================*/ 

/*xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx 
Previous formula as of 11/13 
IF( HOUR(Open__c) &gt; HOUR(Close__c), 
24 - HOUR(Open__c) + HOUR(Close__c), 
HOUR(Close__c) - HOUR(Open__c)) 
xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Business Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <defaultValue>&quot;Hours of Operation&quot;</defaultValue>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hours of Operation</fullName>
                </value>
                <value>
                    <fullName>Pouring Hours</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Business Hours</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Open__c</columns>
        <columns>Close__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BH - {00000}</displayFormat>
        <label>Business Hours Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Hours</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>BH_Close_Conditionally_Required</fullName>
        <active>true</active>
        <description>If Open_Closed__c = &apos;Closed on this day&apos; do not make close__c required, otherwise make it required.</description>
        <errorConditionFormula>/*
 * @see https://accel-entertainment.monday.com/boards/942883797/pulses/1027154672
 */
IF(ISPICKVAL(Open_Closed__c,&apos;Closed on this day&apos;),false,  
   IF(ISPICKVAL(Open_Closed__c,&apos;Open on this day&apos;), 
        IF(ISBLANK(TEXT( Close__c )), true, false),false))</errorConditionFormula>
        <errorDisplayField>Close__c</errorDisplayField>
        <errorMessage>Please enter a value for the Close Field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BH_Open_Conditionally_Required</fullName>
        <active>true</active>
        <description>If Open_Closed__c = &apos;Closed on this day&apos; ,do not make Open__c required, otherwise make it required.</description>
        <errorConditionFormula>/*
 * @see https://accel-entertainment.monday.com/boards/942883797/pulses/1027154672
 */
IF(ISPICKVAL(Open_Closed__c,&apos;Closed on this day&apos;),false,  
   IF(ISPICKVAL(Open_Closed__c,&apos;Open on this day&apos;), 
        IF(ISBLANK(TEXT( Open__c )), true, false),false))</errorConditionFormula>
        <errorDisplayField>Open__c</errorDisplayField>
        <errorMessage>Please enter a value for the Open Field.</errorMessage>
    </validationRules>
</CustomObject>